--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,36 @@
     <string name="desc_login_button">Login button</string>
     <string name="tv_sign_up">SIGN UP</string>
     <string name="tv_reset_pass">RESET PASSWORD</string>
+    <string name="choose_picture">Choose Picture</string>
+    <string name="save">save</string>
+    <string name="signup">SIGN UP</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="email">Email Address</string>
+    <string name="password">Password</string>
+    <string name="name">Name</string>
+    <string name="email_isrequired">Email is required</string>
+    <string name="password_isrequired">Password is required</string>
+    <string name="toast_role_not_match">This App is for Difable</string>
+    <string name="toast_login_succesfull">Login Succesfull!</string>
+    <string name="toast_register_successfull">Register Successfull!</string>
+    <string name="name_isrequired">Name is Required</string>
+    <string name="phoneNumb_isrequired">Phone Number is Required</string>
+    <string name="enter_valid_number">Please Enter Valid Number (Eg : +62xxxxxxxxxxx)</string>
+    <string name="toast_not_pick_image">You haven\'t picked Image</string>
+    <string name="toast_image_uploaded">Image Uploaded!</string>
+    <string name="toast_permission_granted">Permission granted!</string>
+    <string name="toast_permission_denied">Permission denied!</string>
+    <string name="toast_need_permission">You need permission to use this feature!</string>
+
+    <string name="dashboard_title_request">Request</string>
+    <string name="dashboard_title_mybook">My Book</string>
+    <string name="dashboard_title_allbook">All Book</string>
+    <string name="upload_picture">Upload Picture</string>
+    <string name="log_out">Log Out</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_header_title">USERNAME</string>
+    <string name="nav_header_subtitle">email@email.com</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
 </resources>
